Probably everything kinda working but still no categories and report charts