@@ -1,6 +1,8 @@
 package com.leafaries.financemanagerbackend.category;
 
 import org.modelmapper.ModelMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
@@ -11,6 +13,8 @@ import java.util.stream.Collectors;
 @Service
 public class CategoryService {
 
+    private static final Logger logger = LoggerFactory.getLogger(CategoryService.class);
+
     private final CategoryRepository categoryRepository;
     private final ModelMapper modelMapper;
 
@@ -20,32 +24,48 @@ public class CategoryService {
         this.modelMapper = modelMapper;
     }
 
-    public CategoryDto createCategory(CategoryDto categoryDto) {
-        Category category = modelMapper.map(categoryDto, Category.class);
+    public CategoryDto createCategory(CreateCategoryDto createCategoryDto) {
+        logger.debug("Creating category with data: {}", createCategoryDto);
+        Category category = modelMapper.map(createCategoryDto, Category.class);
         Category savedCategory = categoryRepository.save(category);
+        logger.debug("Saved category entity: {}", savedCategory);
         return modelMapper.map(savedCategory, CategoryDto.class);
     }
 
     public List<CategoryDto> getAllCategories() {
-        return categoryRepository.findAll()
-                .stream()
+        logger.debug("Fetching all categories");
+        List<Category> categories = categoryRepository.findAll();
+        logger.debug("Fetched all categories entities: {}", categories);
+        List<CategoryDto> categoryDtos = categories.stream()
                 .map(category -> modelMapper.map(category, CategoryDto.class))
-                .collect(Collectors.toList());
+                .toList();
+        return categoryDtos;
     }
 
     public Optional<CategoryDto> getCategoryById(Long id) {
-        return categoryRepository.findById(id)
-                .map(category -> modelMapper.map(category, CategoryDto.class));
+        logger.debug("Fetching category with id: {}", id);
+        Optional<Category> category = categoryRepository.findById(id);
+        logger.debug("Fetched category entity: {}", category);
+        return category.map(cat -> {
+            CategoryDto categoryDto = modelMapper.map(cat, CategoryDto.class);
+            return categoryDto;
+        });
     }
 
-    public Optional<CategoryDto> updateCategory(Long id, CategoryDto categoryDto) {
+    public Optional<CategoryDto> updateCategory(Long id, CreateCategoryDto createCategoryDto) {
+        logger.debug("Updating category with id: {} and data: {}", id, createCategoryDto);
         return categoryRepository.findById(id).map(category -> {
-            category.setName(categoryDto.getName());
-            return modelMapper.map(categoryRepository.save(category), CategoryDto.class);
+            modelMapper.map(createCategoryDto, category);
+            Category updatedCategory = categoryRepository.save(category);
+            logger.debug("Updated category entity: {}", updatedCategory);
+            CategoryDto updatedCategoryDto = modelMapper.map(updatedCategory, CategoryDto.class);
+            return updatedCategoryDto;
         });
     }
 
     public void deleteCategory(Long id) {
-        categoryRepository.deleteById(id);
+        logger.debug("Deleting category with id: {}", id);
+        categoryRepository.findById(id).ifPresent(categoryRepository::delete);
+        logger.debug("Deleting category with id: {}", id);
     }
 }
